2009-05-22  Jaroslav Hajek  <highegg@gmail.com>

	* src/ov-base-mat.cc (octave_base_matrix<MT>::assign (const
	octave_value_list, typename MT::element_type)): Avoid out of bounds
	assignments.

2009-05-21  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.cc (figure::properties::get_boundingbox,
	figure::properties::set_boundingbox): Get screen size from root
	object.
	(convert_position): Get screen resolution from root object and remove
	unneeded "backend" argument.
	(axes::properties::get_boundingbox,
	figure::properties::get_boundingbox,
	figure::properties::set_boundingbox): Remove unneeded backend argument
	to convert_position call.

	* debug.h (class bp_table): Tag with OCTINTERP_API.
	* input.h (Vdebugging): Ditto.
	* pt-eval.h (class tree_evaluator): Ditto.
	* toplev.h (class octave_call_stack): Ditto.

	* file-io.cc (mkstemp): Add mktemp-based implementation of mkstemp on
	platforms that do not have it (mkstemp is required by the new help
	system).

	* TEMPLATE-INST/Array-os.cc: Add "extern template" declaration for
	Array<octave_idx_type> to avoid implicit instantiation (and duplicate
	symbols at link-time) [Win32]

2009-05-20  John W. Eaton  <jwe@octave.org>

	* pt-assign.cc (maybe_warn_former_built_in_variable):
	Set initialized to true when done initializing vars set.
	From Michael Goffioul  <michael.goffioul@gmail.com>.

2009-05-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-typeinfo.h
	(octave_value_typeinfo::unary_class_ops,
	octave_value_typeinfo::unary_ops,
	octave_value_typeinfo::non_const_unary_ops,
	octave_value_typeinfo::binary_class_ops,
	octave_value_typeinfo::binary_ops,
	octave_value_typeinfo::compound_binary_class_ops,
	octave_value_typeinfo::compound_binary_ops,
	octave_value_typeinfo::cat_ops,
	octave_value_typeinfo::assign_ops,
	octave_value_typeinfo::assignany_ops,
	octave_value_typeinfo::pref_assign_conv,
	octave_value_typeinfo::type_conv_ops,
	octave_value_typeinfo::widening_ops): Declare as Array<void *>.